# IroIro

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  TODO  _config.yml  aclocal.m4  config.status  configure  configure.ac  depcomp  dirac_wilson_Brillouin_OSS.cpp  index.html  params.json  reconfigure-script  todo
lib/: Example.xml  Makefile  Makefile.am  Makefile.in  Reference  Reference_HMC  main_hadron_spectrum_Nf2p1  mainprog  test  valgrind.log.orig
lib/Action/: #action_Nf2_ratio.cpp#  action.cpp  action.h  action.hpp  action_Factory.h  action_Factory.hpp  action_Nf.cpp  action_Nf.hpp  action_Nf2.cpp  action_Nf2.h  action_Nf2.hpp  action_Nf2_DomainWall.cpp  action_Nf2_DomainWall.h  action_Nf2_DomainWall.hpp  action_Nf2_EvenOdd.cpp  action_Nf2_EvenOdd.h  action_Nf2_ratio.cpp  action_Nf2_ratio.h  action_Nf2_ratio.hpp  action_Nf_ratio.cpp  action_Nf_ratio.hpp  action_factory.hpp  action_fermiontype_factory.cpp  action_fermiontype_factory.hpp  action_fermiontype_factory_abs.hpp  action_fermiontype_factory_creator.cpp  action_fermiontype_factory_creator.hpp  action_gauge.cpp  action_gauge.h  action_gauge.hpp  action_gauge_rect.cpp  action_gauge_rect.cpp.backup  action_gauge_rect.hpp  action_gauge_wilson.cpp  action_gauge_wilson.hpp  action_gauge_wilson_adjoint.cpp  action_gauge_wilson_adjoint.hpp  action_gauge_wilson_force.cpp  action_gaugetype_factory.cpp  action_gaugetype_factory.h  (+8 more)
lib/Communicator/: comm_io.cpp  comm_io.hpp  communicator.h  communicator.hpp  communicator_dummy.cpp  communicator_mpi.cpp  communicator_single.cpp  fields_io.cpp  fields_io.hpp  fields_io_ILDG.cpp  fields_io_NERSC.cpp  threaded_allocator.h
lib/Dirac_ops/: antiPeriodicBC.hpp  boundaryCond.cpp  boundaryCond.hpp  cloverTerm.cpp  cloverTerm.hpp  dirac.cpp  dirac.h  dirac.hpp  dirac_BFM_wrapper.hpp  dirac_DWoverlap.cpp  dirac_DWoverlap.hpp  dirac_DomainWall.cpp  dirac_DomainWall.hpp  dirac_DomainWall_4D.cpp  dirac_DomainWall_4D.hpp  dirac_DomainWall_4D_eo.cpp  dirac_DomainWall_4D_eo.hpp  dirac_DomainWall_4D_eoSolv.cpp  dirac_DomainWall_4D_eoSolv.hpp  dirac_DomainWall_4D_fullSolv.cpp  dirac_DomainWall_4D_fullSolv.hpp  dirac_DomainWall_BGQ.code  dirac_DomainWall_BGQ.code.backup  dirac_DomainWall_BGQ.cpp  dirac_DomainWall_BGQ.cpp.DOI  dirac_DomainWall_BGQ.cpp.backup.1  dirac_DomainWall_BGQ.cpp.backup.2  dirac_DomainWall_BGQ.cpp.backup.3  dirac_DomainWall_BGQ.cpp.backup.4  dirac_DomainWall_BGQ.cpp.backup.5  dirac_DomainWall_BGQ.cpp.backup.ok  dirac_DomainWall_BGQ.cpp.doi  dirac_DomainWall_EvenOdd.cpp  dirac_DomainWall_EvenOdd.cpp.safe  dirac_DomainWall_EvenOdd.hpp  dirac_DomainWall_Preconditioners.cpp  dirac_DomainWall_adjoint.hpp  dirac_DomainWall_adjoint_EvenOdd.cpp  dirac_DomainWall_adjoint_EvenOdd.hpp  dirac_Factory.cpp  (+86 more)
lib/EigenModes/: chebyshevAccelFunc.cpp  chebyshevAccelFunc.hpp  chebyshevAccelFuncFactory.cpp  chebyshevAccelFuncFactory.hpp  eigModesNum.cpp  eigModesNum.hpp  eigenCalcGeneral.cpp  eigenCalcGeneral.hpp  eigenModes.cpp  eigenModes.hpp  eigenModesSolver.hpp  eigenModesSolver_Factory.cpp  eigenModesSolver_Factory.hpp  eigenModesSolver_IRL.cpp  eigenModesSolver_IRL.hpp  eigenModes_IRL.cpp  eigenModes_IRL.h  eigenModes_IRL.hpp  eigenProc_Zolotarev.cpp  eigenProc_Zolotarev.h  eigenSorter.cpp  eigenSorter.hpp  eigenSorter_Factory.cpp  eigenSorter_Factory.hpp  findminmax.cpp  findminmax.hpp  foprHermFactory.cpp  foprHermFactory_ChebyshevDdagDLin.hpp  foprHermFunc.hpp  fopr_chebyshev_DdagD.cpp  lowModesHandler.cpp  lowModesHandler.hpp  sortEigen.cpp  sortEigen.h  subSpaceProjector.cpp  subSpaceProjector.hpp
lib/Fields/: field.inl  field_expressions.hpp
lib/Fopr/: fopr.h  foprHermFactory.hpp  foprHermFactoryCreator.cpp  foprHermFactoryCreator.hpp  foprHermFuncFactory.hpp  foprHermFuncFactoryCreator.cpp  foprHermFuncFactoryCreator.hpp  fopr_Chebyshev.h  fopr_DdagDLinear.h  fopr_Dhat.h  fopr_Exp.h  fopr_InvLinear.hpp  fopr_Linear.h  fopr_QuadLinear.h  fopr_RationalApprox.hpp  fopr_eo.h  fopr_eo_wilson.h  fopr_signH_Zolotarev.h
lib/Geometry/: autoMap.hpp  autoMap_improved.cpp  mapping.cpp  mapping.hpp  mapping_improved.cpp  myMap.hpp  shiftField.cpp  shiftField.hpp  siteIndex.cpp  siteIndex.hpp  siteIndex3d.hpp  siteIndexEO.cpp  siteIndex_EvenOdd.cpp  siteIndex_EvenOdd.hpp  siteMap.cpp  siteMap.hpp
lib/HMC/: TrajectoryInfo.hpp  hmcGeneral.cpp  hmcGeneral.h  hmcGeneral.hpp  hmcPrms.cpp  hmcPrms.h  mdExec.cpp  mdExec.h  mdExec.hpp  mdExec_2MN.cpp  mdExec_2MN.hpp  mdExec_Factory.cpp  mdExec_Factory.h  mdExec_Factory.hpp  mdExec_factory.cpp  mdExec_factory.hpp  mdExec_factory_abs.hpp  mdExec_leapfrog.cpp  mdExec_leapfrog.h  mdExec_leapfrog.hpp  mdExec_leapfrog_eigen.cpp  mdExec_leapfrog_eigen.h  mdExec_leapfrog_eigen.hpp
lib/IO/: ILDG_header.cpp  ILDG_header.hpp  ILDG_reader.cpp  ILDG_reader.hpp  ILDG_writer.cpp  ILDG_writer.hpp  JLQCDLegacy_reader.cpp  JLQCDLegacy_reader.hpp  NERSC_reader.cpp  NERSC_reader.hpp  NERSC_writer.cpp  NERSC_writer.hpp  binary_reader.cpp  binary_reader.hpp  binary_writer.cpp  binary_writer.hpp  fields_io.cpp  fields_io.hpp  general_reader.hpp  general_writer.hpp  generic_header.hpp  readers.hpp  text_header.cpp  text_header.hpp  writers.hpp
lib/Laplacian/: laplacian.cpp  (+1 more)
tests/: Makefile.am  Makefile.am.original  Makefile.in  conf_04040408.txt  get_eval.cpp  input.xml  seed_file  temp_out  temp_out_singlecore  testResults.info  testWilsonBrillouin.cpp  test_Add_Flux.cpp  test_Add_Flux.hpp  test_BFM_HDCG_Inverter.cpp  test_BFM_Inverter.cpp  test_BFM_Inverter_wrapper.cpp  test_BFM_Moebius.cpp  test_BFM_Operator.cpp  test_BFM_Operator.cpp.bak  test_BaryonSpectrum_Nf2p1  test_BaryonSpectrum_Nf2p1.cpp  test_BaryonSpectrum_Nf2p1.hpp  test_BaryonSpectrum_Nf2p1.xml  test_ChiralCondensate  test_ChiralCondensate.cpp  test_ChiralCondensate.hpp  test_ChiralCondensate.xml  test_Clover  test_CorrelateEigenModes.cpp  test_CorrelateEigenModes.hpp  test_DWF  test_DWF.cpp  test_DWF.hpp  test_DWF_EvenOdd.cpp  test_DWF_EvenOdd.hpp  test_DiracWilson_Adjoint  test_DiracWilson_Adjoint.cpp  test_DiracWilson_Adjoint.hpp  test_DomainWall.cpp  test_DomainWall.hpp  (+262 more)
(+391 files in other folders)
